@@ -208,6 +208,7 @@ SETTING_PROVIDER_PLAYBACK_ENABLE_EXTERNAL_SUBTITLES = 'emby.enableexternalsubtit
 SETTING_PROVIDER_INTERFACE_SHOW_SERVER_MESSAGES = 'emby.showservermessages'
 
 # media import setting identifiers and values
+SETTING_IMPORT_FORCE_SYNC = 'emby.forcesync'
 SETTING_IMPORT_VIEWS = 'emby.importviews'
 SETTING_IMPORT_VIEWS_OPTION_ALL = 'all'
 SETTING_IMPORT_VIEWS_OPTION_SPECIFIC = 'specific'
