@@ -4,6 +4,7 @@
 - import local or remote trailer
 - fix exceptions / crashes when playing non-imported videos
 - support fast synchronization after a successful initial full synchronization
+- add an import-specific setting to force a full synchronization
 
 [B]Version 0.0.6[/B]
 - fix playback stopped / ended callback handling
